feat: work in progresss (it's a mess, I think it's best to start all over again begininig from the top)
