# proxy/modules/model/response.go
@@ -1,7 +1,0 @@
-package model
-
-type JSONResponse struct {
-	Error   bool   `json:"error"`
-	Message string `json:"message,omitempty"`
-	Data    any    `json:"data,omitempty"`
-}
